fix mice grid position

--- a/src/app/ui/components/animal-grid/animal-grid.component.html
+++ b/src/app/ui/components/animal-grid/animal-grid.component.html
@@ -1,3 +1,4 @@
-<section class="p-2 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4">
-  <app-animal-card [animal]="animal" *ngFor="let animal of (animals | async)"></app-animal-card>
+<section class="m-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-4"
+         [class.xl:grid-cols-4]="count > 3">
+  <app-animal-card [animal]="animal" *ngFor="let animal of (animals$ | async)"></app-animal-card>
 </section>
